--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "11ty-portfolio",
-  "version": "1.0.0",
+  "version": "1.0.0-rc1",
   "description": "Minimal Poftfolio / blog template built with eleventy & tailwindcss.",
   "scripts": {
     "serve": "ELEVENTY_ENV=dev npx eleventy --serve",
