--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.0.23"
   },
-  "main": ".eleventy.js"
+  "main": ".eleventy.js",
+  "dependencies": {
+    "eleventy-plugin-embed-everything": "^1.14.0",
+    "markdown-it-footnote": "^3.0.3"
+  }
 }
