--- a/package.json
+++ b/package.json
@@ -17,22 +17,23 @@
   "author": "kailoon",
   "license": "ISC",
   "devDependencies": {
-    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.2.0",
-    "autoprefixer": "^10.4.13",
-    "luxon": "^2.3.0",
-    "markdown-it": "^12.3.2",
-    "markdown-it-anchor": "^8.4.1",
+    "autoprefixer": "^10.4.14",
+    "markdown-it-anchor": "^8.6.7",
     "markdown-it-link-attributes": "^4.0.0",
     "nunjucks": "^3.2.3",
-    "postcss-cli": "^9.1.0",
-    "tailwindcss": "^3.2.2"
+    "tailwindcss": "^3.3.1"
   },
   "main": ".eleventy.js",
   "dependencies": {
-    "eleventy-plugin-embed-everything": "^1.14.0",
-    "markdown-it-footnote": "^3.0.3"
+    "@11ty/eleventy-upgrade-help": "^2.0.5",
+    "eleventy-plugin-embed-everything": "^1.15.1",
+    "luxon": "^3.3.0",
+    "markdown-it": "^13.0.1",
+    "markdown-it-footnote": "^3.0.3",
+    "postcss-cli": "^10.1.0"
   }
 }
